--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Lab7P2_DiegoCruz
 excludes=
+file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Lab7P2_DiegoCruz
-main.class=lab7p2_diegocruz.Lab7P2_DiegoCruz
+main.class=lab7p2_diegocruz.MainAdmin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
